rework ScheduledSQLExportTask