@@ -1,5 +1,6 @@
 package gsrs.module.substance.tasks;
 
+import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
@@ -8,13 +9,11 @@ import gsrs.scheduledTasks.SchedulerPlugin;
 import gsrs.scheduledTasks.SchedulerPlugin.TaskListener;
 import gsrs.springUtils.StaticContextAccessor;
 
-import java.io.BufferedOutputStream;
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
 import java.io.PrintStream;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.sql.Clob;
@@ -31,23 +30,31 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipOutputStream;
 
 import javax.sql.DataSource;
 
 import lombok.Data;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.compress.archivers.ArchiveEntry;
+import org.apache.commons.compress.archivers.ArchiveException;
+import org.apache.commons.compress.archivers.ArchiveOutputStream;
+import org.apache.commons.compress.archivers.ArchiveStreamFactory;
+import org.apache.commons.compress.compressors.CompressorException;
+import org.apache.commons.compress.compressors.CompressorOutputStream;
+import org.apache.commons.compress.compressors.CompressorStreamFactory;
 import org.apache.commons.vfs2.FileObject;
+import org.apache.commons.vfs2.FileSelector;
 import org.apache.commons.vfs2.FileSystemException;
 import org.apache.commons.vfs2.FileSystemOptions;
+import org.apache.commons.vfs2.FileSystemManager;
+import org.apache.commons.vfs2.FileType;
+import org.apache.commons.vfs2.FileTypeSelector;
 import org.apache.commons.vfs2.Selectors;
 import org.apache.commons.vfs2.UserAuthenticator;
 import org.apache.commons.vfs2.auth.StaticUserAuthenticator;
 import org.apache.commons.vfs2.impl.DefaultFileSystemConfigBuilder;
 import org.apache.commons.vfs2.impl.StandardFileSystemManager;
-import org.apache.commons.vfs2.provider.ftp.FtpFileSystemConfigBuilder;
-import org.apache.commons.vfs2.provider.sftp.SftpFileSystemConfigBuilder;
+import org.apache.commons.vfs2.util.DelegatingFileSystemOptionsBuilder;
 
 /**
  * Used to schedule SQL export to CSV files
@@ -66,7 +73,7 @@ public class ScheduledSQLExportTask extends ScheduledTaskInitializer {
     private String csvQuoteChar = "\"";
     private String csvEscapeChar = "";
     @JsonProperty(value="files")
-    private List<ZipEntryConfig> zipEntries = new ArrayList<ZipEntryConfig>();
+    private List<EntryConfig> files = new ArrayList<EntryConfig>();
     @JsonProperty(value="destinations")
     private List<DestinationConfig> destinations = new ArrayList<DestinationConfig>();
     @JsonIgnore
@@ -83,7 +90,7 @@ public class ScheduledSQLExportTask extends ScheduledTaskInitializer {
     }
 
     @Data
-    private class ZipEntryConfig {
+    private class EntryConfig {
         @JsonProperty(value="name")
         private final String name;
         @JsonProperty(value="msg")
@@ -91,35 +98,58 @@ public class ScheduledSQLExportTask extends ScheduledTaskInitializer {
         @JsonProperty(value="sql")
         private final String sql;
         @JsonProperty(value="encoding")
-        private final String encoding;
+        private String encoding = "ISO-8859-1";
+        @JsonProperty(value="addHeader")
+        private Boolean addHeader;
 
-        public String getEncoding() {
-            if (encoding != null) {
-                return encoding;
-            }
-            return "ISO-8859-1";
+        public boolean getAddHeader() {
+            return addHeader != null ? addHeader.booleanValue() : true;
         }
     }
 
-    @Data
     private class DestinationConfig {
-        @JsonProperty(value="user")
-        private final String user;
-        @JsonProperty(value="password")
-        private final String password;
-        @JsonProperty(value="uri")
-        private String uri;
+        private final URI uri;
+        private final FileSystemOptions options;
 
-        public String getUri() {
-            if (uri != null) {
-                return uri;
+        @JsonCreator
+        public DestinationConfig(Map<String, String> dst) throws FileSystemException, URISyntaxException {
+            FileSystemOptions opts = new FileSystemOptions();
+            this.uri = new URI(dst.remove("uri"));
+            String scheme = this.uri.getScheme().toLowerCase();
+            String domain =  dst.remove("domain");
+            String user =  dst.remove("name");
+            String password = dst.remove("password");
+            if (user != null && user.length() > 0 && password != null && password.length() > 0) {
+                UserAuthenticator auth = new StaticUserAuthenticator(domain, user, password);
+                DefaultFileSystemConfigBuilder.getInstance().setUserAuthenticator(opts, auth);
             }
-            return "exports/substances.zip";
+            if (dst.size() > 0) {
+                FileSystemManager manager = new StandardFileSystemManager();
+                ((StandardFileSystemManager) manager).init();
+                DelegatingFileSystemOptionsBuilder delegate = new DelegatingFileSystemOptionsBuilder(manager);
+                for (Map.Entry<String, String> entry : dst.entrySet()) {
+                    delegate.setConfigString(opts, scheme, entry.getKey(), (String) entry.getValue());
+                }
+                manager.close();
+            }
+            this.options = opts;
+        }
+
+        public URI getUri() {
+            return uri;
+        }
+
+        public FileSystemOptions getOptions() {
+            return options;
+        }
+
+        public FileObject getFileObject(FileSystemManager manager) throws FileSystemException {
+            return manager.resolveFile(uri.toString(), options);
         }
     }
 
-    public void setFieldConverter(String className) throws ClassNotFoundException, IllegalAccessException, InstantiationException {
-        this.fieldConverter = (FieldConverter) Class.forName(className).newInstance();
+    public void setFieldConverter(String className) throws ClassNotFoundException, IllegalAccessException, InstantiationException, InvocationTargetException, NoSuchMethodException {
+        this.fieldConverter = (FieldConverter) Class.forName(className).getDeclaredConstructor().newInstance();
     }
 
     private Connection getConnection() throws SQLException {
@@ -131,13 +161,7 @@ public class ScheduledSQLExportTask extends ScheduledTaskInitializer {
         return dataSource.getConnection();
     }
 
-    private PrintStream makePrintStream(File writeFile, String encoding) throws IOException {
-        return new PrintStream(
-            new BufferedOutputStream(new FileOutputStream(writeFile)),
-            false, encoding);
-    }
-
-    private File makeCsvFile(String msg, String encoding, ResultSet rs, TaskListener l) throws IOException {
+    private void makeCsvFile(EntryConfig entry, PrintStream out, ResultSet rs, TaskListener l) throws IOException {
         ResultSetMetaData metadata = null;
         Clob clob_value = null;
         String value = "";
@@ -147,14 +171,14 @@ public class ScheduledSQLExportTask extends ScheduledTaskInitializer {
         int rnum = 0;
         int ccount = 0;
         List<String> cast_fields = new ArrayList<String>();
-        File tmpFile = File.createTempFile("export", ".tmp");
 
-        l.message("Get " + msg);
-        //log.debug("Get " + msg);
+        l.message("Get " + entry.getMsg());
+        //log.debug("Get " + entry.getMsg());
 
-        try (PrintStream out = makePrintStream(tmpFile, encoding)) {
+        try {
             metadata = rs.getMetaData();
             ccount = metadata.getColumnCount();
+            // Output header
             for (int i = 1; i <= ccount; i++) {
                 value = metadata.getColumnName(i).toUpperCase();
                 if (value.startsWith("CAST_TO_PART")) {
@@ -166,12 +190,15 @@ public class ScheduledSQLExportTask extends ScheduledTaskInitializer {
                 } else {
                     cast_fields.add("NONE");
                 }
+                if (!entry.getAddHeader()) continue;
                 if (i != 1) {
                     out.print(csvDelimiter);
                 }
                 out.print(value);
             }
-            out.println();
+            if (entry.getAddHeader()) {
+                out.println();
+            }
 
             // Get total
             rs.last();
@@ -222,126 +249,183 @@ public class ScheduledSQLExportTask extends ScheduledTaskInitializer {
                 rnum = rs.getRow();
                 l.progress(rnum * denom);
                 if (rnum % 10 == 0) {
-                    l.message("Exporting " + msg + " " + rnum + " of " + total);
+                    l.message("Exporting " + entry.getMsg() + " " + rnum + " of " + total);
                 }
             }
         } catch (Exception e) {
             log.error("Exception:", e);
+        } finally {
+            out.close();
         }
-        return tmpFile;
     }
 
-    private FileSystemOptions getFileSystemOptions(URI uri, String user, String password) throws FileSystemException {
-        FileSystemOptions opts = new FileSystemOptions();
-        if (user != null && user.length() > 0 && password != null && password.length() > 0) {
-            UserAuthenticator auth = new StaticUserAuthenticator("", user, password);
-            DefaultFileSystemConfigBuilder.getInstance().setUserAuthenticator(opts, auth);
-        }
-        switch (uri.getScheme().toLowerCase()) {
-            case "ftp":
-                FtpFileSystemConfigBuilder.getInstance().setUserDirIsRoot(opts, false);
-                FtpFileSystemConfigBuilder.getInstance().setPassiveMode(opts, true);
+    private static FileObject makeArchive(FileSystemManager manager, FileObject tmpFs, FileObject dst) throws ArchiveException, CompressorException, FileSystemException, IOException {
+        byte[] buffer = new byte[1024];
+        int len;
+        String archiverName = null;
+        String compressorName = null;
+
+        switch (dst.getName().getExtension().toLowerCase()) {
+            case "zip":
+                archiverName = ArchiveStreamFactory.ZIP;
                 break;
-            case "sftp":
-                SftpFileSystemConfigBuilder.getInstance().setUserDirIsRoot(opts, false);
-                SftpFileSystemConfigBuilder.getInstance().setStrictHostKeyChecking(opts, "no");
-                SftpFileSystemConfigBuilder.getInstance().setSessionTimeoutMillis(opts, 10000);
+            case "jar":
+                archiverName = ArchiveStreamFactory.JAR;
+                break;
+            case "7z":
+                archiverName = ArchiveStreamFactory.SEVEN_Z;
+                break;
+            case "ar":
+                archiverName = ArchiveStreamFactory.AR;
+                break;
+            case "arj":
+                archiverName = ArchiveStreamFactory.ARJ;
+                break;
+            case "tar":
+                archiverName = ArchiveStreamFactory.TAR;
+                break;
+            case "cpio":
+                archiverName = ArchiveStreamFactory.CPIO;
+                break;
+            case "gz": case "gzip":
+                compressorName = CompressorStreamFactory.GZIP;
+                break;
+            case "bz2": case "bzip2":
+                compressorName = CompressorStreamFactory.BZIP2;
+                break;
+            case "br":
+                compressorName = CompressorStreamFactory.BROTLI;
+                break;
+            case "xz":
+                compressorName = CompressorStreamFactory.XZ;
+                break;
+            case "z":
+                compressorName = CompressorStreamFactory.Z;
+                break;
+            case "cpgz":
+                archiverName = ArchiveStreamFactory.CPIO;
+                compressorName = CompressorStreamFactory.GZIP;
+                break;
+            case "tgz":
+                archiverName = ArchiveStreamFactory.TAR;
+                compressorName = CompressorStreamFactory.GZIP;
+                break;
+            case "cpbz2":
+                archiverName = ArchiveStreamFactory.CPIO;
+                compressorName = CompressorStreamFactory.BZIP2;
+                break;
+            case "tbz2":
+                archiverName = ArchiveStreamFactory.TAR;
+                compressorName = CompressorStreamFactory.BZIP2;
                 break;
             default:
-                break;
+                return tmpFs;
         }
-        return opts;
+
+        if (archiverName == null) {
+            if (dst.getName().getBaseName().toLowerCase().endsWith(".tar." + dst.getName().getExtension().toLowerCase())) {
+                archiverName = ArchiveStreamFactory.TAR;
+            } else if (dst.getName().getBaseName().toLowerCase().endsWith(".cpio." + dst.getName().getExtension().toLowerCase())){
+                archiverName = ArchiveStreamFactory.TAR;
+            } else {
+                return tmpFs;
+            }
+        }
+
+        FileObject arcFile = manager.resolveFile("tmp:///export.arcTmp");
+        try (ArchiveOutputStream aos = new ArchiveStreamFactory().createArchiveOutputStream(archiverName, arcFile.getContent().getOutputStream())) {
+            for (FileObject entryFile : tmpFs.findFiles(new FileTypeSelector(FileType.FILE))) {
+                aos.putArchiveEntry(
+                    aos.createArchiveEntry(
+                        tmpFs.getFileSystem().replicateFile(entryFile, new FileTypeSelector(FileType.FILE)),
+                        tmpFs.getName().getRelativeName(entryFile.getName())));
+                InputStream is = entryFile.getContent().getInputStream();
+                while (( len = is.read(buffer)) > 0) {
+                    aos.write(buffer, 0, len);
+                }
+                aos.closeArchiveEntry();
+            }
+        }
+
+        if(compressorName == null) {
+            arcFile.close();
+            return arcFile;
+        }
+
+        FileObject comprFile = manager.resolveFile("tmp:///export.comprTmp");
+        try (CompressorOutputStream cos = new CompressorStreamFactory().createCompressorOutputStream(compressorName, comprFile.getContent().getOutputStream())) {
+            InputStream is = arcFile.getContent().getInputStream();
+            while (( len = is.read(buffer)) > 0) {
+                cos.write(buffer, 0, len);
+            }
+        }
+        arcFile.close();
+        comprFile.close();
+        return comprFile;
     }
 
-    private void uploadFile(File localFile, TaskListener l) {
-        String user = null;
-        String password = null;
-        URI uri = null;
-        StandardFileSystemManager manager = new StandardFileSystemManager();
-        try {
-            manager.init();
-            FileObject lfo = manager.resolveFile(localFile.getAbsolutePath());
-            if (lfo.exists()) {
-                for (DestinationConfig dst : destinations) {
-                    user = dst.getUser();
-                    password = dst.getPassword();
-                    try {
-                        uri = new URI(dst.getUri());
-                    } catch (URISyntaxException e) {
-                        uri = null;
-                    }
-                    if (uri == null || uri.getScheme() == null) {
-                        File f = new File(dst.getUri());
-                        uri = f.toURI();
-                    }
-                    l.message("Uploading file to " + uri.toString());
-                    log.info("Uploading file to " + uri.toString());
-                    try {
-                        //log.debug("URI:" + uri.toString() + " user:" + user + " password:" + password);
-                        FileSystemOptions opts = getFileSystemOptions(uri, user, password);
-                        FileObject rfo = manager.resolveFile(uri.toString(), opts);
-                        if (!rfo.getParent().exists()) {
-                            rfo.getParent().createFolder();
-                        }
-                        log.debug("Source URI: " + lfo.getPublicURIString() + " Destination URI: " + rfo.getPublicURIString() + " Options: " + opts.toString());
-                        rfo.copyFrom(lfo, Selectors.SELECT_SELF);
-                    } catch (Exception e) {
-                        log.error("Exception", e);
-                    }
-                }
-            } else {
-                log.error("Local file " + localFile.getName() + " not found.");
-            }
-        } catch (Exception e) {
-            log.error("Exception", e);
-        } finally {
-            manager.close();
+    private static void uploadFile(FileSystemManager manager, FileObject tmpFs, DestinationConfig dst) throws ArchiveException, CompressorException, FileSystemException, IOException {
+        FileObject rfo = dst.getFileObject(manager);
+        FileSelector selector = Selectors.SELECT_SELF;
+        if (!rfo.getParent().exists()) {
+            rfo.getParent().createFolder();
         }
+        FileObject lfo = makeArchive(manager, tmpFs, rfo);
+        if (tmpFs.equals(lfo)) {
+            selector = Selectors.EXCLUDE_SELF;
+        }
+        rfo.copyFrom(lfo, selector);
     }
 
     public void run(SchedulerPlugin.JobStats stats, TaskListener l) {
-        File tf = null;
-        File zipFile = null;
-        byte[] buffer = new byte[1024];
-        int len;
+        StandardFileSystemManager manager = new StandardFileSystemManager();
+        OutputStream outputStream = null;
+        CompressorStreamFactory csf = new CompressorStreamFactory();
 
         try {
+            manager.init();
             lock.lock();
             l.message("Establishing connection");
             log.info("SQL export started.");
-            zipFile = File.createTempFile("export", ".zip");
-            try (ZipOutputStream out = new ZipOutputStream(new FileOutputStream(zipFile))) {
-                try (Connection c = getConnection()) {
-                    for (ZipEntryConfig ze : zipEntries) {
-                        //log.debug("ZipEntryConfig: " + ze.getName() + " " + ze.getMsg() + " " + ze.getSql());
-                        out.putNextEntry(new ZipEntry(ze.getName()));
-                        try (PreparedStatement s = c.prepareStatement(ze.getSql(),
-                                                                      ResultSet.TYPE_SCROLL_INSENSITIVE,
-                                                                      ResultSet.CONCUR_READ_ONLY)) {
-                            try (ResultSet rs = s.executeQuery()) {
-                                tf = makeCsvFile(ze.getMsg(), ze.getEncoding(), rs, l);
-                                try (FileInputStream in = new FileInputStream(tf)) {
-                                    while (( len = in.read(buffer)) > 0) {
-                                        out.write(buffer, 0, len);
-                                    }
-                                    out.closeEntry();
-                                }
-                                tf.delete();
-                            }
+            FileObject tmpFs = manager.resolveFile("tmp:///export");
+            try (Connection c = getConnection()) {
+                for (EntryConfig entry : files) {
+                    //log.debug("ZipEntryConfig: " + entry.getName() + " " + entry.getMsg() + " " + entry.getSql());
+                    FileObject csvFile = tmpFs.resolveFile(entry.getName());
+                    String extension = csvFile.getName().getExtension().toLowerCase();
+                    if (csf.getOutputStreamCompressorNames().contains(extension)) {
+                        outputStream = csf.createCompressorOutputStream(extension, csvFile.getContent().getOutputStream());
+                    } else if ("bz2".equals(extension)) {
+                        outputStream = csf.createCompressorOutputStream("bzip2", csvFile.getContent().getOutputStream());
+                    } else {
+                        outputStream = csvFile.getContent().getOutputStream();
+                    }
+                    PrintStream out = new PrintStream(outputStream, false, entry.getEncoding());
+                    try (PreparedStatement s = c.prepareStatement(entry.getSql(),
+                                                                  ResultSet.TYPE_SCROLL_INSENSITIVE,
+                                                                  ResultSet.CONCUR_READ_ONLY)) {
+                        try (ResultSet rs = s.executeQuery()) {
+                            makeCsvFile(entry, out, rs, l);
                         }
                     }
-                } finally {
-                    l.message("Closed Connection");
                 }
             } catch (Exception e) {
                 log.error("Error writing SQL export", e);
+            } finally {
+                l.message("Closed Connection");
             }
-            uploadFile(zipFile, l);
+            if (tmpFs.findFiles(new FileTypeSelector(FileType.FILE)).length > 0) {
+                for (DestinationConfig dst : destinations) {
+                    l.message("Uploading file to " + dst.getUri().toString());
+                    log.debug("Destination URI: " + dst.getUri().toString() + " Options: " + dst.getOptions().toString());
+                    uploadFile(manager, tmpFs, dst);
+                }
+            }
         } catch (Exception e) {
             log.error("Exception", e);
         } finally {
             lock.unlock();
-            zipFile.delete();
+            manager.close();
         }
     }
 
